WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231973
Address post-landing feedback to wasm exceptions
https://bugs.webkit.org/show_bug.cgi?id=231973
Summary
Address post-landing feedback to wasm exceptions
Tadeu Zagallo
Reported
2021-10-19 12:02:03 PDT
...
Attachments
Patch
(25.49 KB, patch)
2021-10-19 12:52 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch for landing
(25.49 KB, patch)
2021-10-19 17:08 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2021-10-19 12:52:21 PDT
Created
attachment 441774
[details]
Patch
Saam Barati
Comment 2
2021-10-19 14:59:24 PDT
Comment on
attachment 441774
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=441774&action=review
r=me
> Source/JavaScriptCore/wasm/WasmLLIntGenerator.cpp:1176 > + // We have to materialize the arguments here since it might included constants or
included => include
> Source/JavaScriptCore/wasm/WasmLLIntGenerator.cpp:1178 > + // in stack. The reason we don't call materializeConstantsAndLocals here is that
in stack => in the stack
Tadeu Zagallo
Comment 3
2021-10-19 17:08:38 PDT
Created
attachment 441818
[details]
Patch for landing
EWS
Comment 4
2021-10-19 17:40:26 PDT
Committed
r284513
(
243257@main
): <
https://commits.webkit.org/243257@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441818
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-10-19 17:41:26 PDT
<
rdar://problem/84441842
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug